# dockerized-app

./: README.md  requests.http
App/: .gitignore  README.md
App/client/src/lib/components/: ChatView2.svelte
App/python-server/: pyproject.toml
Notebooks/: gradio_dashboard.py  rerankers.py  testing.ipynb
Notebooks/utils/: __init__.py  tools.py
chat-engine/: Dockerfile  gradio_dashboard.py  run.sh
python-server/: main.py
python-server/config/: secrets.py
